--- a/introduce.html
+++ b/introduce.html
@@ -37,7 +37,43 @@
       </ul>
     </div>
   </div>
-</nav>  
-    
+</nav>
+<div class="introduce-content">
+  <h4>소개</h4>
+  <h5>1.기능 </h5>
+  <li>
+    "사진 추가" 버튼을 클릭하여 사진 파일을 선택하여 업로드하면, 업로드한 사진 속 인물과 가장 닮은 선수를 알  수 있습니다. 
+  </li>
+  <li>
+    해당 선수의 종목과 함께 사진 속 인물이 선수와 몇 퍼센트 닮았는지도 알 수 있습니다.
+  </li>
+  <h5>2.선수 명단</h5>
+  <li>
+    예측 결과를 통해 나올 수 있는 선수들의 명단은 다음과 같습니다.
+  </li>
+  <li>
+    농구: 서장훈, 서태웅, 허재
+  </li>
+  <li>
+    축구: 박지성, 손흥민, 이강인
+  </li>
+  <li>
+    야구: 류현진, 이대호, 추신수
+  </li>
+  <li>
+    양궁: 김우진, 김재덕, 오진혁
+  </li>
+  <li>
+    League of Legends: 김건우(한화생명 - Zeka), 김혁규(Dplus kia - Deft), 이상혁(SKT T1 - Faker)
+  </li>
+  <h5>3.개발 팀 명단</h5>
+  <li>
+    개발 팀 명단은 한지훈, 정진욱, 전정훈입니다.
+  </li>
+  <li>
+    완성해서 가져갔었는데.. 네. 빠꾸먹었습니다. 그렇다구요.
+  </li>
+</div>
+
   </body>
 </html>
